--- a/src/app/pages/map/marker-detail/marker-detail.component.html
+++ b/src/app/pages/map/marker-detail/marker-detail.component.html
@@ -58,7 +58,9 @@
 
       <ion-row class="header-card-details" style="display: flex; margin-bottom: 5px;">
 
-        <ion-button style="width: 107px !important; height: 32px;" shape="round" size="small" color="light"
+        <ion-button  style="width: 107px !important; height: 32px;
+        
+        " shape="round" size="small" color="light" 
           class="endorsement-btn">
           {{currentItem.TotalPosts}} Posts
         </ion-button>
