fixed proximity bug, fixed notification order, added feature of map pan to current marker, fixed thumbnail issue

--- a/src/app/pages/map/map-result/map-result.component.html
+++ b/src/app/pages/map/map-result/map-result.component.html
@@ -143,7 +143,7 @@
         <div style="display: flex;  width: 100%; justify-content: space-between;">
           <div style="display:flex; gap: 20px;">
             <div >
-              <p style="margin-top: 14px;" class="miles"> 10 Miles Away</p>
+              <p style="margin-top: 14px;" class="miles"> 1{{user['Proximity']}}0 Miles Away</p>
             </div>
             <div style="display: flex; justify-content:center; align-items: center; ">
               <ion-icon name="view-on-map" style="font-size: 36px;"
@@ -329,7 +329,7 @@
 
             <div style="display: flex; gap: 20px; width: 230px;">
               <div style="display: flex;">
-                <p style="margin-top: 14px;" class="miles"> 10 Miles Away</p>
+                <p style="margin-top: 14px;" class="miles"> {{user['Proximity']}} Miles Away</p>
               </div>
               <div style="display: flex; justify-content:center; align-items: center; ">
                 <ion-icon name="view-on-map" style="font-size: 36px;"
@@ -379,7 +379,7 @@
 
             <div style="display: flex; gap: 20px; width: 230px;">
               <div style="display: flex;">
-                <p style="margin-top: 14px;" class="miles"> 10 Miles Away</p>
+                <p style="margin-top: 14px;" class="miles"> {{user['Proximity']}} Miles Away</p>
               </div>
               <div style="display: flex; justify-content:center; align-items: center; ">
                 <ion-icon name="view-on-map" style="font-size: 36px;"
@@ -427,7 +427,7 @@
 
             <div style="display: flex; gap: 20px; width: 230px;">
               <div style="display: flex;">
-                <p style="margin-top: 14px;" class="miles"> 10 Miles Away</p>
+                <p style="margin-top: 14px;" class="miles"> {{user['Proximity']}} Miles Away</p>
               </div>
               <div style="display: flex; justify-content:center; align-items: center; ">
                 <ion-icon name="view-on-map" style="font-size: 36px;"
@@ -476,7 +476,7 @@
 
             <div style="display: flex; gap: 20px; width: 230px;">
               <div style="display: flex;">
-                <p style="margin-top: 14px;" class="miles"> 10 Miles Away</p>
+                <p style="margin-top: 14px;" class="miles"> {{user['Proximity']}} Miles Away</p>
               </div>
               <div style="display: flex; justify-content:center; align-items: center; ">
                 <ion-icon name="view-on-map" style="font-size: 36px;"
@@ -527,7 +527,7 @@
        
             <div style="display: flex; gap: 20px; width: 230px;">
               <div style="display: flex;">
-                <p style="margin-top: 14px;" class="miles"> 10 Miles Away</p>
+                <p style="margin-top: 14px;" class="miles"> {{user['Proximity']}} Miles Away</p>
               </div>
               <div style="display: flex; justify-content:center; align-items: center; ">
                 <ion-icon name="view-on-map" style="font-size: 36px;"
