--- a/src/app/pages/map/marker-detail/marker-detail.component.html
+++ b/src/app/pages/map/marker-detail/marker-detail.component.html
@@ -99,7 +99,7 @@
 
           <div *ngIf="currentItem.IsConnected === 1 || currentItem.Greeting === 3" style="display: flex; align-items: center; justify-content: center;">
             <ion-button shape="round" size="small"
-              class="primary-button">
+              class="primary-button" (click)="startChat(currentItem)">
               <ion-icon style="margin-right: 6px;" name="chaticoninchat" class="icon-40"></ion-icon>
               Chat now
             </ion-button>
@@ -309,3 +309,19 @@
       onerror="this.onerror=null;this.src='assets/imgs/male.png';">
   </ion-avatar>
 </ng-template>
+
+<!-- .endorsement-btn{
+
+  --background: transparent;
+  --box-shadow: none;
+  border: 1px solid #1A3253;
+  border-radius: 17px;
+  color: #1A3253;
+  width: 150px;
+  height: 29px;
+  font-size: 17px;
+}
+.endorsement-btn::part(native){
+  background: none;
+  color: none;
+} -->
