--- a/src/app/pages/map/viewing-users/viewing-users.component.html
+++ b/src/app/pages/map/viewing-users/viewing-users.component.html
@@ -21,25 +21,21 @@
   </ion-toolbar>
 
   <div class="maptab" *ngIf="viewTemplate == 'Viewing'">
-    <ion-button shape="round" [ngClass]="{'active':viewType == 1}"
-      (click)="onViewTypeChange(1)">
+    <ion-button shape="round" [ngClass]="{'active':viewType == 1}" (click)="onViewTypeChange(1)">
       Viewing
     </ion-button>
-    <ion-button shape="round" [ngClass]="{'active':viewType == 2}"
-      (click)="onViewTypeChange(2)">
+    <ion-button shape="round" [ngClass]="{'active':viewType == 2}" (click)="onViewTypeChange(2)">
       Ignored
     </ion-button>
   </div>
-  <div style="display: flex; justify-content: center; align-items: center;"
-    class="maptab" *ngIf="viewTemplate != 'Viewing'">
-    <ion-button class="activeclass" shape="round"
-      [ngClass]="{'active': activeOrExpired === 1}"
+  <div style="display: flex; justify-content: center; align-items: center;" class="maptab"
+    *ngIf="viewTemplate != 'Viewing'">
+    <ion-button class="activeclass" shape="round" [ngClass]="{'active': activeOrExpired === 1}"
       (click)="activeExpiredGreeting(1)">
       Active
     </ion-button>
 
-    <ion-button class="activeclass" shape="round"
-      [ngClass]="{'active': activeOrExpired === 2}"
+    <ion-button class="activeclass" shape="round" [ngClass]="{'active': activeOrExpired === 2}"
       (click)="activeExpiredGreeting(2)">
       Previous
     </ion-button>
@@ -88,25 +84,19 @@
   <div class="mapreslist">
     <ion-list style="padding:0px">
       <!-- *ngFor="let user of viewTemplate == 'Viewing'? _commonService.viewingUsers: _commonService.greetingWithDetails ;let i=index"> -->
-      <div
-        *ngFor="let user of viewTemplate == 'Viewing'? viewList.names : filteredGreetingList ;let i=index">
-        <div
-          *ngIf="filteredGreetingList.length > 0 || viewList.names.length > 0"
-          class="lines-bottom ion-padding">
+      <div *ngFor="let user of viewTemplate == 'Viewing'? viewList.names : filteredGreetingList ;let i=index">
+        <div *ngIf="filteredGreetingList.length > 0 || viewList.names.length > 0" class="lines-bottom ion-padding">
           <!-- (click)="openUser(user)" -->
-          <div *ngIf="viewTemplate != 'Viewing' " style="gap: 0px !important;" class="display-flex--row flex-align-center">
+          <div *ngIf="viewTemplate != 'Viewing' " style="gap: 0px !important;"
+            class="display-flex--row flex-align-center">
             <ion-avatar (click)="viewConnection(user)" class="ion-margin-end">
-              <img style="width: 59px; height: 59px; border-radius: 50%;"
-                animation="gradient"
+              <img style="width: 59px; height: 59px; border-radius: 50%;" animation="gradient"
                 src="{{appConstants.mediaPrefix + ((user.CreatedBy.ProfileImage) || (user.UserProfilePhoto)) }}"
-                onError="this.src='assets/icons/business/anonymous.svg'"
-                alt="User Profile">
+                onError="this.src='assets/icons/business/anonymous.svg'" alt="User Profile">
             </ion-avatar>
-            <div
-              style="display: flex; justify-content: space-between; width: 100%;">
-              <div
-                style="display: flex; justify-content: center; align-items: center;"
-                class="font-primary-text" (click)="viewConnection(user)">
+            <div style="display: flex; justify-content: space-between; width: 100%;">
+              <div style="display: flex; justify-content: center; align-items: center;" class="font-primary-text"
+                (click)="viewConnection(user)">
                 <!-- <ion-icon style="font-size: 35px !important;"
                   name="unconnected"></ion-icon> -->
                 <span class="username font-sz-14">{{ (user.CreatedBy.UserName)
@@ -115,60 +105,54 @@
               <div *ngIf="user.Status != null"
                 style="text-align: center; justify-content: center; display: flex; align-items: center; margin-left: 6px; gap: 5px;">
                 <ion-icon [name]="changeIcon(user.Status)"></ion-icon>
-                <p [ngStyle]="{'color': textColor}"
-                  class="acceptedreq">{{greetStatus}}</p>
+                <p [ngStyle]="{'color': textColor}" class="acceptedreq">{{greetStatus}}</p>
               </div>
 
-              <div
-                style="display: flex; align-items: center; margin-left: auto;">
+              <div style="display: flex; align-items: center; margin-left: auto;">
                 <ion-icon name="chat-3dots" (click)="presentMenuModalForOther(user.CreatedBy.Id)"></ion-icon>
               </div>
             </div>
 
           </div>
 
-          <div
-            style="display: flex;  justify-content: space-between; align-items: center; ">
+          <div style="display: flex;  justify-content: space-between; align-items: center; ">
             <div style="display: flex; flex-direction: column; ">
-              <p class="postcount"
-                style="margin-bottom: 0px !important; margin-top: 9px;
+              <p class="postcount" style="margin-bottom: 0px !important; margin-top: 9px;
               font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) 14px/24px var(--unnamed-font-family-sf-pro-display);
-color: var(--unnamed-color-285078);
-text-align: left;
-font: normal normal 600 16px/26px SF Pro Display;
-letter-spacing: 0.22px;
-color: #285078;">200 Posts - 5.2k Connections</p>
+              color: var(--unnamed-color-285078);
+              text-align: left;
+              font: normal normal 600 16px/26px SF Pro Display;
+              letter-spacing: 0.22px;
+              color: #285078;"
+              >
+              200 Posts - 5.2k Connections</p>
               <div style="display: flex; gap: 10px;">
                 <p class="datetime" style="margin-top: 9px; margin-bottom: 0px;
                 font: var(--unnamed-font-style-normal) normal var(--unnamed-font-weight-600) 14px/24px var(--unnamed-font-family-sf-pro-display);
-color: var(--unnamed-color-285078);
-text-align: left;
-font: normal normal 600 16px/26px SF Pro Display;
-letter-spacing: 0.22px;
-color: #285078;"> {{_commonService.formatDateToIST(user.ModifiedOn)}}</p>
-
+                color: var(--unnamed-color-285078);
+                text-align: left;
+                font: normal normal 600 16px/26px SF Pro Display;
+                letter-spacing: 0.22px;
+                color: #285078;"
+                > 
+                {{_commonService.formatDateToIST(user.ModifiedOn)}}</p>
                 <!-- <p class="datetime" > {{getDateAndTime(user.ModifiedOn, true, false)}}</p> -->
                 <!-- <p class="datetime">{{getDateAndTime(user.ModifiedOn, false, true)}}</p> -->
               </div>
             </div>
 
-            <greeting-view *ngIf="viewTemplate != 'Viewing' "
-              [fromUserId]="user.CreatedBy.Id || user.UserId"
+            <greeting-view *ngIf="viewTemplate != 'Viewing' " [fromUserId]="user.CreatedBy.Id || user.UserId"
               [fromUserName]="user.CreatedBy.UserName || user.UserName"
               [fromUserProfile]="(user.CreatedBy.Id + '/' + user.CreatedBy.ProfileImage) || (user.UserId + '/' + user.UserProfilePhoto)"
-              [userInfo]="user"
-              (close)="handleClose($event)">
+              [userInfo]="user" (close)="handleClose($event)">
             </greeting-view>
 
           </div>
 
-          <div *ngIf="viewTemplate == 'Viewing'" (click)="openUser(user)"
-            class="display-flex--row flex-align-center">
+          <div *ngIf="viewTemplate == 'Viewing'" (click)="openUser(user)" class="display-flex--row flex-align-center">
             <ion-avatar (click)="viewConnection(user)" class="ion-margin-end">
-              <img animation="gradient"
-                src="{{appConstants.mediaPrefix + user.UserProfilePhoto }}"
-                onError="this.src='assets/icons/business/anonymous.svg'"
-                alt="User Profile">
+              <img animation="gradient" src="{{appConstants.mediaPrefix + user.UserProfilePhoto }}"
+                onError="this.src='assets/icons/business/anonymous.svg'" alt="User Profile">
             </ion-avatar>
             <div class="font-primary-text" (click)="viewConnection(user)">
               <span class="font-sz-14">{{user.UserName}}</span>
@@ -199,14 +183,12 @@ color: #285078;"> {{_commonService.formatDateToIST(user.ModifiedOn)}}</p>
           </div>
         </div>
       </div>
-      <div class="no-active-greeting"
-        style=" margin-top: 150px;"
+      <div class="no-active-greeting" style=" margin-top: 150px;"
         *ngIf="!loaded && viewTemplate != 'Viewing' && filteredGreetingList.length == 0 && activeOrExpired == 1">
         <ion-icon style="width: 81px; height: 79px;" name="greeting"></ion-icon>
         <p class="noactive">No Active Greetings!</p>
       </div>
-      <div class="no-active-greeting"
-        style=" margin-top: 150px;"
+      <div class="no-active-greeting" style=" margin-top: 150px;"
         *ngIf="!loaded && viewTemplate != 'Viewing' && filteredGreetingList.length == 0 && activeOrExpired == 2">
         <ion-icon style="width: 81px; height: 79px;" name="greeting"></ion-icon>
         <p class="noactive">No Previous Greeting !</p>
