--- a/src/global.scss
+++ b/src/global.scss
@@ -339,7 +339,7 @@ ion-icon.ion-accordion-toggle-icon {
   font: var(--unnamed-font-style-normal) normal normal 16px/26px var(--unnamed-font-family-sf-pro-display);
 color: var(--unnamed-color-285078);
 
-font: normal normal normal 20px/26px SF Pro Display;
+font: normal normal normal 18px/26px SF Pro Display;
 letter-spacing: 0.25px;
 color: #285078;
 opacity: 1;
@@ -1095,6 +1095,7 @@ textarea.alert-input.sc-ion-alert-md {
   padding-right: 13px !important;
  text-align: center;
   max-width: 320px;
+  width: 321px;
   border-radius: 11px;
 
 
@@ -1134,4 +1135,20 @@ opacity: 1;
   margin-bottom: 0px;
   font-size: 14px;
 }
+.alert-radio-group.sc-ion-alert-md, .alert-checkbox-group.sc-ion-alert-md{
+  max-height: 458px !important;
+}
 
+/* global.scss */
+.custom-alerts .alert-radio-label {
+  font: var(--unnamed-font-style-normal) normal normal 14px/24px var(--unnamed-font-family-sf-pro-display);
+  text-align: left;
+  font: normal normal normal 17px/24px SF Pro Display;
+  letter-spacing: 0.22px;
+  color: #788692;
+  padding-left: 40px;
+}
+
+.alertrepot .alert-button-group sc-ion-alert-md{
+margin-top: 30px;
+}
