--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -103,7 +103,7 @@
     </ng-template>
   </ion-modal>
 
-  <ion-modal #markerDetailModal [initialBreakpoint]="0.37"  [breakpoints]="[0, 0.37, 0.70]" handle="false">
+  <ion-modal #markerDetailModal [initialBreakpoint]="countedHeight"    [breakpoints]="[0, countedHeight, 0.70]" handle="false">
     <ng-template>
       <div (touchstart)="swipe($event, 'start')" (touchend)="swipe($event, 'end')">
         <app-marker-detail [markerCurrentIndex]="markerCurrentIndex" [markerList]="markerListMainResult"
