--- a/src/app/pages/sidemenu/sales-listing/sales-list/sales-list.page.scss
+++ b/src/app/pages/sidemenu/sales-listing/sales-list/sales-list.page.scss
@@ -32,7 +32,7 @@ ion-content {
             padding: 4px 13px;
             & > ion-label {
               
-                font: normal normal 600 14px/24px SF Pro Display;
+                font: normal normal 600 16px/24px SF Pro Display;
                 letter-spacing: 0.22px;
                 color: #285078;
                // height: 14px;
@@ -43,7 +43,7 @@ ion-content {
                 }
                
               h5 {
-                font: normal normal 600 12px/24px SF Pro Display;
+                font: normal normal 600 14px/24px SF Pro Display;
                 letter-spacing: 0.19px;
                 color: #03A9F5;
               }
@@ -61,6 +61,7 @@ ion-content {
               .fi-delete-btn::part(native){
                 margin-left: -4px;
                 width: 35px;
+                padding-right: 9px;
                 }
               .fi-edit-btn::part(native){
                 margin-left: -4px;
