updated sonar search fields

--- a/src/app/pages/map/map.page.html
+++ b/src/app/pages/map/map.page.html
@@ -79,6 +79,7 @@
           <ion-icon style="font-size: 35px;" name="bluecur"></ion-icon>
         </ion-fab-button>
 
+        <!-- sonar search icon -->
         <ion-fab-button size="large" color="primary"
           style="height: 62px;width: 62px;margin: auto;--box-shadow: 2px 2px 7px #0B113157;" (click)="searchMap()" [disabled]="!isBackEnabled">
           <ion-icon name="bluesearch" style="font-size: 35px;"></ion-icon>
