--- a/src/app/pages/map/map-search/map-search.component.scss
+++ b/src/app/pages/map/map-search/map-search.component.scss
@@ -28,6 +28,12 @@ background-image: none !important;
     margin-bottom: 0px;
     
 }
+.medbf1{
+    margin-top: 2px;
+    margin-bottom: 0px;
+    display: flex;
+    justify-content: space-between;
+}
 ion-range {
 
     div[slot="start"],
@@ -114,7 +120,8 @@ ion-item {
 
     display: inline-block;
     /* min-width: 88px; */
-    width: 70px;
+    width: 75px;
+    height: 34px;
     border-radius: 17px;
     margin: 10px 0px;
 
@@ -187,9 +194,14 @@ ion-item {
 }
 
 .locationsearch{
-    width: 241px !important;
+    // width: 241px !important;
+    // height: 34px
+    width: 113px;
     height: 34px;
-    background-color: #EAF1F4;
+    font-size: 12px;
+    margin-top: 10px;
+    text-transform: none;
+    // background-color: #EAF1F4;
    
 }
 .linemark{
